<resources>
    <string name="app_name">Feedi</string>
    <string name="account_label">Create an Account</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account_sign_in">Already have Account?Sign in</string>
    <string name="contact_123456">Contact:123456</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in_to_your_account_label">Sign In to your account</string>
    <string name="back_icon">back_icon</string>
    <string name="submit">submit</string>
    <string name="forget_password_label">Forget Password</string>
    <string name="forget_description">Enter your contact number below and we will send you a reset link.</string>
    <string name="city">City</string>
    <string name="cnic">Cnic</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_profile">Create Profile</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="enter_email">Enter Email</string>
    <string name="about_img">about_img</string>
    <string name="about_yourself">About Yourself</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settings">Settings</string>
    <string name="reviews">Reviews</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about_us">About Us</string>
    <string name="delete_account">Delete Account</string>
    <string name="name_of_person">Name of Person</string>
    <string name="app">App</string>
    <string name="user">User</string>
    <string name="account">Account</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="plus_icon_string">Plus</string>
    <string name="adding_leftover">Adding Leftover</string>
    <string name="food_img">food_img</string>
    <string name="about_food">About food</string>
    <string name="instructions">Instructions</string>
    <string name="select_date">Expirey Date</string>
    <string name="delivery_option">Delivery option</string>
    <string name="request">Request</string>
    <string name="the_complete_request_of_needy">The complete request of needy</string>
    <string name="food_info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="food_required_for_members_4">Food Required for members:4</string>
    <string name="edit_icon">edit_icon</string>
    <string name="email">Email</string>
        <string name="gujranwala">Gujranwala</string>
    <string name="phone_no">Phone no.</string>
    <string name="female">Female</string>
    <string name="address">Address:</string>
    <string name="report">Report</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="leftover">Leftover</string>
    <string name="no_of_requests_added">No. of requests added:</string>
<string name="_03007409750">03007409750</string>
    <string name="_40">40</string>
    <string name="status">Status</string>
<string name="kiranshakeel02gmail_com">"kiranshakeel02@gmail.com"</string>
    <string name="_3410163121954">3410163121954</string>
    <string name="last">Last</string>
    <string name="first">First</string>
</resources>