<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/user">
        <menu>


            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_review"
                android:icon="@drawable/review"
                android:title="@string/reviews" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/signout"
                android:icon="@drawable/sign_out"
                android:title="@string/sign_out" />

        </menu>
    </item>


    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/about"
                android:title="@string/about_us" />
            <item
                android:id="@+id/conditions"
                android:icon="@drawable/terms_and_conditions"
                android:title="@string/terms_and_conditions" />
            <item
                android:id="@+id/delte_accnt"
                android:icon="@drawable/cross"
                android:title="@string/delete_account" />

        </menu>
    </item>

    <!--    <group android:checkableBehavior="single">-->
    <!--        <item android:title="@string/account">-->
    <!--            <menu>-->

    <!--                <item-->
    <!--                    android:id="@+id/delte_accnt"-->
    <!--                    android:icon="@drawable/cross"-->
    <!--                    android:title="@string/delete_account" />-->
    <!--            </menu>-->
    <!--        </item>-->
    <!--    </group>-->

</menu>