<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="190dp"

            android:background="@color/black">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/back_icon"
                android:src="@drawable/arrow_white" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/back_icon"
                android:layout_margin="20dp"
                android:text="@string/report"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/report_person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/name_of_person"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/report_person_city"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_below="@+id/label"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/city"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/enter_reason"
            android:inputType="textMultiLine"
            android:textColor="#000000"
            android:textColorHint="#000000" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <android.widget.Button
                android:id="@+id/report_sub"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>