<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="60dp"
        android:layout_height="60dp"
android:layout_margin="10dp"
        android:src="@drawable/chandler" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/image"
        android:layout_toRightOf="@+id/image"
        android:text="@string/first" />


    <TextView
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/first_name"
        android:layout_toRightOf="@+id/first_name"
        android:text="@string/last"
        android:layout_toLeftOf="@+id/status"
        android:layout_toStartOf="@+id/status" />


    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/status"
 />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/image"
        android:layout_toRightOf="@+id/image"

        android:ellipsize="end"
        android:maxLines="1"

        android:text="@string/instructions" />
</RelativeLayout>

