<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/black"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileimageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/person_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_pers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/first"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/last"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>